--- a/CSS/index.css
+++ b/CSS/index.css
@@ -112,3 +112,11 @@ nav
     width: 50px;
     height: 50px;
 }
+
+.contri
+{
+    background-color: white;
+    padding: 10px;
+    font-size:1.5em;
+    font-family: serif;
+}
