--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     background-color: black;
     color: white;
 }
+.bg-color-white{
+	background-color: white;
+    color: black;
+}
 .button-style-custom{
     padding: 10px;
     border-radius: 10px;
@@ -132,4 +136,8 @@ p {
 
 span {
     color: #2BD6B4;
+}
+
+.border-radius-half{
+	border-radius: 10px;
 }
